--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ href="style.css">
 </head>
 <body>
 <h1>Bo3</h1>
-<img src="bo3.jpg">
+<img src="bo3">
 <p>Kill or be killed
 </p>
 <p id="Come get some">killer
