--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ href="style.css">
 <img src="bo3">
 <p>Kill or be killed
 </p>
-<p id="Come get some">killer
+<p id="Come get some">killer</p>
 </p>
 </body>
 </html>
