--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet"
+href="style.css">
 <title>Bo3!</title>
 </head>
 <body>
@@ -8,7 +9,7 @@
 <img src="bo3.jpg">
 <p>Kill or be killed
 </p>
-<p id="Come get some">killer</p>
+<p id="Comegetsome">killer
 </p>
 </body>
 </html>
